Fixed scrollbar issue using request animation frame

--- a/src/scss/components/tab-pane.scss
+++ b/src/scss/components/tab-pane.scss
@@ -15,10 +15,11 @@
     .mivhak-tab-pane-inner {
         overflow: hidden;
         position: absolute;
-        left: 15px;
-        top: 15px;
-        right: 15px;
-        bottom: 15px;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        margin: 15px;
         
         pre {
             background-color: transparent;
